--- a/goFish.css
+++ b/goFish.css
@@ -264,3 +264,39 @@ body
   /*align-items: center;*/
   /*justify-content: center;*/
 }
+#message1
+{
+  position: absolute;
+  left: 60%;
+  top: 40%;
+  font-size: 1.5em;
+  color: white;
+  text-align: left;
+}
+#message2
+{
+  position: absolute;
+  left: 60%;
+  top: 45%;
+  font-size: 1.5em;
+  color: white;
+  text-align: left;
+}
+#message3
+{
+  position: absolute;
+  left: 60%;
+  top: 50%;
+  font-size: 1.5em;
+  color: white;
+  text-align: left;
+}
+#message4
+{
+  position: absolute;
+  left: 60%;
+  top: 55%;
+  font-size: 1.5em;
+  color: white;
+  text-align: left;
+}
