--- a/goFish.css
+++ b/goFish.css
@@ -300,3 +300,13 @@ body
   color: white;
   text-align: left;
 }
+#winningMessage
+{
+  position: absolute;
+  margin-top: 10%;
+  left: 0px;
+  top: 0px;
+  text-align: center;
+  width: 100%;
+  font-size: 3em;
+}
